# libtool-autoconf

./: Makefile.am  README.autogen.sh  README.debug  README.md  config.status  configure.ac  main.c
method1a/: Makefile.am  README.md  config.status  configure.ac  method1a.c
method2d/: Makefile.am  README.md  configure.ac  method2.c
method2s/: Makefile.am  README.md  configure.ac
method3d/: Makefile.am  README.md  configure.ac  main2d.c  method3.c
method3s/: Makefile.am  README.md  configure.ac  main3s.c
method4/: Makefile.am  README.md  configure.ac  libmine.c  main4.c  method4.c
tools/: autogen.sh
